module6/dp.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpserver-helm.51.cafe
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: httpserver-helm
      mode: SIMPLE
